# CP-Server

./: CMakeLists.txt  CP-Server.kdev4
include/: magic.h  main.h
src/: magic.cpp  main.cpp
